* user interface
  - added support for reverse portrait/landscape screen orientations
  - multiple flarm team mates and teams possible
  - nearest airspace distance info boxes
  - better font for large info box values
  - airspace warnings: show vertical distance if above/below
  - profiles are not incremental anymore; initial support for editable
    user profiles
* map
  - redraw terrain only if needed
  - airspace rendering optimised
* data files
  - auto-detect the character encoding in waypoint/airspace files
* tasks
  - allow finish height in MSL or AGL

Version 6.1.5 - 2011/08/20
* data files
  - fixed arcs in TNP airspace files
* devices
  - fixed temperature reading from Altair/Vega and Westerboer devices
* calculations
  - airspace distance miscalculations fixed
  - fixed builtin polars with points above 200 km/h
* Android
  - fix timer crash

Version 6.1.4 - 2011/07/30
* memory leaks fixed
* calculations
  - fix miscalculation in start point chooser
  - finish: revert "allow flight to boundary" for now
* map
  - fix for the aircraft symbol
  - airspace rendering optimised
  - disable huge topography files on PPC2000 and Altair
* Android
  - fix text rendering on Adreno GPUs
  - fix another suspend/resume crash
  - clip the unit symbol in info boxes
  - smooth CPU usage info box
* Altair:
  - fix upside down screen

Version 6.1.3 - 2011/07/14
* devices
  - fix task declaration on PC
  - LX: correct byte alignment for task declaration
* calculations
  - reduce memory usage
  - finish: allow flight to boundary
  - Racing task, FAI Task: allow 11 turnpoints
  - task: support AGL maximum start height
* user interface
  - translation updates
  - new translations: Japanese, Ukrainian
  - support mouse wheel on Linux
  - fix duplicate text input in edit controls on PC
  - update info boxes after leaving full-screen
  - fix PNA model type
* map
  - fix map location when all devices fail
* Android
  - support hardware keyboard in custom XCI files