@@ -31,6 +31,7 @@ Version 6.2 - not yet released
   - airspace warnings: show vertical distance if above/below
   - profiles are not incremental anymore; initial support for editable
     user profiles
+  - MacCready InfoBox: scale increments according to user unit
 * map
   - redraw terrain only if needed
   - airspace rendering optimised
